# StereoLunar

./: README.md
data_generation/misc/: moon.py
data_generation/surrender_script/: generateimagaes.py  preprocess_moon.py
data_generation/surrender_script/scenarios/: 0_180_nadir.py  RandomPaires2.py  RandomPairs.py  landing.py  landing_dataset.py  pitch.py  pitch_180_270.py  pitch_change4.py  pitch_parallel.py  pitchreal.py
dataset-generation/: dynamic_trajectory.py  generate_images.py  landing_dataset.py  nadir_trajectory.py  oblique_trajectory.py  process_dataset.py  readme.md
dataset-generation/datas/DEM/: south5m.dem
dataset-generation/datas/texture/: ldem_875s_5m_heightmap.geo
dataset-generation/descentimagegenerator/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
dataset-generation/descentimagegenerator/descentimagegenerator/: __init__.py  config.py  display.py  logger.py  main.py  trajectoryreader.py  trajectoryrenderer.py  utils.py
dataset-generation/descentimagegenerator/examples/: conf_boulders.csv  moon_landing_img.py  moon_landing_img_hybrid_dem.py  moon_landing_td_ce3.py  moon_with_boulders.py  template_trajectory.csv
mast3r/: .gitignore  demo.py  mast3r-slam.yml  requirements.txt  visloc.py
mast3r/dust3r/dust3r/: demo.py
mast3r/dust3r/dust3r/datasets/: __init__.py
mast3r/mast3r/: demo.py  model.py
mast3r/mast3r/cloud_opt/: sparse_ga.py
mast3r/mast3r/datasets/: __init__.py  blender_dataset.py
quick_testing/Dynamic_baseline_sample/paire1/: im_01195.npz  im_01196.exr  im_01196.npz  im_01199.exr
(+33 files in other folders)
